# face_reco_acs

./: README.md
client/: CMakeLists.txt  Makefile  client  client.pro  clisocket.c  main.cpp  main.h  opencv_deal.cpp  v4l2_cap.h
client/include/: clisocket.h  mainwindow.h  v4l2_cap.h
client/src/: mainwindow.cpp  v4l2_cap.c
server/: CMakeLists.txt  Makefile  main.cpp  main.h  opencv_deal.h  server  svrsocket.h  usermngr.cpp
server/include/: mainwindow.h  usermngr.h
server/src/: mainwindow.cpp  opencv_deal.cpp  svrsocket.c
